--- a/src/hojas-de-estilo/encabezadoPrincipal.css
+++ b/src/hojas-de-estilo/encabezadoPrincipal.css
@@ -2,7 +2,7 @@
 {
     width: 100%;
     height: 6.25rem;
-    background-color: #2E4374;
+    background-color: transparent;
     display: flex;
     flex-wrap: wrap;
     align-items: center;
@@ -18,7 +18,6 @@
     & .logo{
         width: 3.5em;
         margin-left: 1.3em;
-        background-color: brown;
         border-radius: 100%;
         & img{
                 width: 50%;
@@ -35,7 +34,6 @@
 {
     list-style: none;
     display: flex;
-    background-color: orange;
     align-self: center;
     height: 100%;
     gap: 1.25rem;
