--- a/src/hojas-de-estilo/encabezadoPrincipal.css
+++ b/src/hojas-de-estilo/encabezadoPrincipal.css
@@ -14,14 +14,19 @@
     flex-basis: 50%;
     height: 50%;
     display: flex;
-    gap: 20px;
+    gap: 1.25rem;
     & .logo{
-        width: 3.5em;
+        width: 3.75rem;
+        height: 3.75rem;
+        background-color: orange;
         margin-left: 1.3em;
         border-radius: 100%;
+        position: relative;
+        overflow: hidden;
         & img{
-                width: 50%;
-                height: 50%;
+          width: 100%;
+          height: 100%;
+          object-fit: cover;
         }
     }
     & .logo:hover
