--- a/src/App.css
+++ b/src/App.css
@@ -4,3 +4,83 @@
   box-sizing: border-box;
   font-family: Arial, Helvetica, sans-serif;
 }
+.menu-contenedor
+{
+    width: 100%;
+    height: 6.25rem;
+    background-color: transparent;
+    display: flex;
+    flex-wrap: wrap;
+    align-items: center;
+    justify-content:space-between;
+    z-index: 100;
+}
+.logo-contenedor
+{
+    flex-basis: 50%;
+    height: 50%;
+    display: flex;
+    gap: 1.25rem;
+    & .logo{
+        width: 3.75rem;
+        height: 3.75rem;
+        margin-left: 1.3em;
+        border: 1px solid white;
+        border-radius: 100%;
+        position: relative;
+        overflow: hidden;
+        & img{
+          width: 100%;
+          height: 100%;
+          object-fit: cover;
+        }
+    }
+    & .logo:hover
+    {
+        transform: scale(1.1);
+    }
+}
+
+.navegacion-contenedor
+{
+    list-style: none;
+    display: flex;
+    align-self: center;
+    height: 100%;
+    gap: 1.25rem;
+    & li{
+        height: 100%;
+        display: flex;
+        justify-content: center;
+        padding: 0 0.5em;
+        border: 2px solid  transparent;
+    & a{
+        padding-top: .87rem;
+        text-decoration: none;
+        color: white;
+        font-size: 1.1rem;
+      }
+      & a:hover
+      {
+       color: rgb(228, 240, 216);
+       opacity: 0.5;
+      }
+    }
+}
+.navegacion{
+    display: flex;
+    justify-content: flex-end;
+    width:  50%;
+    height: 50%;
+    & .navegacion-contenedor{
+        margin-right: 1.3em;
+        & :nth-child(2){
+            border-color:  white;
+            border-radius: 5px;
+        }
+        & :nth-child(2):hover{
+            border-color: rgb(228, 240, 216) ;
+            opacity:0.8;
+        }
+    }
+}
