--- a/src/App.css
+++ b/src/App.css
@@ -8,6 +8,7 @@
 {
     width: 100%;
     height: 6.25rem;
+    padding-top: 1.0625rem;
     background-color: transparent;
     display: flex;
     flex-wrap: wrap;
@@ -18,12 +19,13 @@
 .logo-contenedor
 {
     flex-basis: 50%;
-    height: 50%;
+    height: 100%;
     display: flex;
-    gap: 1.25rem;
+    align-items: center;
     & .logo{
         width: 3.75rem;
         height: 3.75rem;
+        margin-bottom: 10.4px;
         margin-left: 1.3em;
         border: 1px solid white;
         border-radius: 100%;
@@ -46,19 +48,20 @@
     list-style: none;
     display: flex;
     align-self: center;
-    height: 100%;
+    height: 50%;
+    align-items: center;
     gap: 1.25rem;
     & li{
-        height: 100%;
         display: flex;
+        height: 100%;
         justify-content: center;
+        align-items: center;
         padding: 0 0.5em;
         border: 2px solid  transparent;
     & a{
-        padding-top: .87rem;
         text-decoration: none;
         color: white;
-        font-size: 1.1rem;
+        font-size: 1.4rem;
       }
       & a:hover
       {
@@ -71,9 +74,10 @@
     display: flex;
     justify-content: flex-end;
     width:  50%;
-    height: 50%;
+    height: 100%;
     & .navegacion-contenedor{
         margin-right: 1.3em;
+        
         & :nth-child(2){
             border-color:  white;
             border-radius: 5px;
