--- a/src/hojas-de-estilo/footerPrincipal.css
+++ b/src/hojas-de-estilo/footerPrincipal.css
@@ -3,12 +3,29 @@
     width: 100%;
     min-height: 6.25rem;
     padding: 2.5rem 0;
-    background-color: chocolate;
+    background-color: #040D12;
     display: flex;
     flex-direction: column;
     justify-content: baseline;
     align-items: center;
     gap: 3.125rem;
+    color: white;
+}
+.item-logo{
+    & h3
+    {
+        margin-top: 10px;
+    }
+}
+.logo-footer
+{
+    width: 60px;
+    height: 60px;
+    & img{
+        width: 100%;
+        height: 100%;
+        object-fit: cover;
+    }
 }
 .flex-item
 {
