--- a/src/hojas-de-estilo/Registro.css
+++ b/src/hojas-de-estilo/Registro.css
@@ -14,7 +14,7 @@
     display: block;
     margin-bottom: 5px;
     color: #fff;
-    font-family: Impact, Haettenschweiler, 'Arial Narrow Bold', sans-serif;
+    font-family:cursive;
   }
   
   input[type="text"],
