--- a/src/hojas-de-estilo/loginFormulario.css
+++ b/src/hojas-de-estilo/loginFormulario.css
@@ -5,3 +5,42 @@
     justify-content: center;
     align-items: center;
 }
+
+  
+  .contenedor-Formulario label {
+    display: block;
+    margin-bottom: 10px;
+    font-weight: bold;
+    font-size: 20px;
+  }
+  
+  
+  .contenedor-Formulario label,
+  .contenedor-Formulario input {
+    display: block;
+    margin-bottom: 10px;
+  }
+  
+  .contenedor-Formulario input[type="text"],
+  .contenedor-Formulario input[type="password"] {
+    width: 100%;
+    padding: 10px;
+    border: 1px solid #ccc;
+    border-radius: 3px;
+    box-sizing: border-box;
+  }
+  
+ 
+  .contenedor-Formulario button[type="button"] {
+    background-color: #0074D9;
+    color: #fff;
+    border: none;
+    border-radius: 3px;
+    padding: 10px 20px;
+    cursor: pointer;
+  }
+  
+ 
+  .contenedor-Formulario button[type="button"]:hover {
+    background-color: #0056b3;
+  }
