--- a/src/hojas-de-estilo/loginFormulario.css
+++ b/src/hojas-de-estilo/loginFormulario.css
@@ -5,15 +5,20 @@
     justify-content: center;
     align-items: center;
 }
-
-  
-  .contenedor-Formulario label {
+.Formulario{
+    width: 31.25rem;
+    height: 31.25rem;
+    display: flex;
+    flex-direction: column;
+}
+.contenedor-Formulario label {
     display: block;
     margin-bottom: 10px;
     font-weight: bold;
     font-size: 20px;
   }
   
+
   
   .contenedor-Formulario label,
   .contenedor-Formulario input {
