--- a/src/hojas-de-estilo/loginFormulario.css
+++ b/src/hojas-de-estilo/loginFormulario.css
@@ -1,51 +1,50 @@
-.contenedor-Formulario{
-    width: 100%;
-    height: 100vh;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-}
-.Formulario{
-    width: 31.25rem;
-    height: 31.25rem;
-    display: flex;
-    flex-direction: column;
-}
-.contenedor-Formulario label {
-    display: block;
-    margin-bottom: 10px;
-    font-weight: bold;
-    font-size: 20px;
+.contenedor-Formulario {
+    max-width: 600px;
+    margin: 0 auto;
+    margin-top: 150px;
+    padding: 20px;
+    border: 25px solid #ccc;
+    border-radius: 10px;
+    background-color: #f9f9f9;
+    font-family: cursive;
   }
-  
+ 
 
   
-  .contenedor-Formulario label,
-  .contenedor-Formulario input {
+  label {
     display: block;
-    margin-bottom: 10px;
+    margin-bottom: 5px;
+    color: #333;
   }
   
-  .contenedor-Formulario input[type="text"],
-  .contenedor-Formulario input[type="password"] {
+  input[type="text"],
+  input[type="password"] {
     width: 100%;
     padding: 10px;
+    margin-bottom: 10px;
     border: 1px solid #ccc;
     border-radius: 3px;
     box-sizing: border-box;
   }
   
- 
-  .contenedor-Formulario button[type="button"] {
-    background-color: #0074D9;
+  button[type="button"] {
+    background-color: #007BFF;
     color: #fff;
     border: none;
     border-radius: 3px;
     padding: 10px 20px;
     cursor: pointer;
+    font-weight: bold;
   }
   
- 
-  .contenedor-Formulario button[type="button"]:hover {
+  button[type="button"]:hover {
     background-color: #0056b3;
   }
+  
+  .Formulario {
+    background-color: #f9f9f9;
+    padding: 20px;
+    border-radius: 10px;
+    box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+  }
+  
