--- a/src/hojas-de-estilo/areaTrabajoPrincipal.css
+++ b/src/hojas-de-estilo/areaTrabajoPrincipal.css
@@ -10,4 +10,8 @@
  width: 100%;
  height: 100vh;
  background-color: whitesmoke;
+ display: flex;
+ justify-content: center;
+ align-items: center;
+ flex-wrap: wrap;
 }
