--- a/src/hojas-de-estilo/loginFormulario.css
+++ b/src/hojas-de-estilo/loginFormulario.css
@@ -11,14 +11,14 @@
  
 
   
-  label {
+  .label {
     display: block;
     margin-bottom: 5px;
     color: #333;
   }
   
-  input[type="text"],
-  input[type="password"] {
+  .input[type="text"],
+  .input[type="password"] {
     width: 100%;
     padding: 10px;
     margin-bottom: 10px;
@@ -27,7 +27,7 @@
     box-sizing: border-box;
   }
   
-  button[type="button"] {
+  .button[type="button"] {
     background-color: #007BFF;
     color: #fff;
     border: none;
@@ -37,7 +37,7 @@
     font-weight: bold;
   }
   
-  button[type="button"]:hover {
+  .button[type="button"]:hover {
     background-color: #0056b3;
   }
   
