--- a/src/hojas-de-estilo/Registro.css
+++ b/src/hojas-de-estilo/Registro.css
@@ -1,43 +1,36 @@
-#regiscss {
-  max-width: 1000px;
-  margin: 0 auto;
-  padding: 20px;
-
-  border-radius: 10px;
-  background-color: #f9f9f9;
-  font-family: cursive;
-}
-
-label {
-  display: block;
-  margin-bottom: 5px;
-  color: #333; 
-}
-
-input[type="text"],
-input[type="email"],
-input[type="password"] {
+.contenedor-registro-principal{
   width: 100%;
-  padding: 10px;
-  margin-bottom: 10px;
-  border: 1px solid #ccc; 
-  border-radius: 3px;
-  box-sizing: border-box;
-
+  height: 100vh;
+  display: flex;
   align-items: center;
+  justify-content: center ;
 }
-
-button[type="submit"] {
-  background-color: #007BFF; 
-  color: #fff; 
-  border: none;
-  border-radius: 3px;
-  padding: 10px 20px;
-  cursor: pointer;
-  align-items: center;
-  font-weight: bold;
-}
-
-button[type="submit"]:hover {
-  background-color: #0056b3; 
+.registro-wrapper{
+  width: 32.5rem;
+  background-color: transparent;
+  color: #fff;
+  border-radius: .625rem;
+  padding: 1.875rem 2.5rem;
+  border: 2px solid rgba(255,255,255, .2);
+  backdrop-filter: blur(2px);
+  & h1{
+    font-size: 2.25em;
+    text-align: center;
+  }
+  & button{
+    width: 100%;
+    height: 45px;
+    background-color: #333;
+    border-radius: 2.5rem;
+    box-shadow: 0 0 10px rgba(0,0,0, .2);
+    cursor: pointer;
+    font-size: 1rem;
+    color: #fff;
+    font-weight: 600 ;
+  }
+  & button:hover{
+    background-color: #005B41;
+   opacity: 4;
+   color: #fff;
+  }
 }
