--- a/src/hojas-de-estilo/footerPrincipal.css
+++ b/src/hojas-de-estilo/footerPrincipal.css
@@ -3,7 +3,8 @@
     width: 100%;
     min-height: 6.25rem;
     padding: 2.5rem 0;
-    background-color: #040D12;
+    background-color: transparent;
+    backdrop-filter: blur(20px);
     display: flex;
     flex-direction: column;
     justify-content: baseline;
@@ -41,5 +42,30 @@
         font-weight: 300;
         font-family: Georgia, 'Times New Roman', Times, serif;
          text-align: center;
+    }
+}
+
+.item-git{
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+    align-items: center;
+    & span{
+        margin-top: 10px;
+    }
+    & a{
+        color: #fff;
+        text-decoration: none;
+      }
+      & a:hover{
+        text-decoration: underline;
+      }
+}
+
+.git
+{
+    font-size: 3rem;
+    &:hover{
+        transform: scale(1.1);
     }
 }
