--- a/src/hojas-de-estilo/footerPrincipal.css
+++ b/src/hojas-de-estilo/footerPrincipal.css
@@ -3,7 +3,7 @@
     width: 100%;
     min-height: 6.25rem;
     padding: 2.5rem 0;
-    background-color: transparent;
+    background-color: black;
     backdrop-filter: blur(20px);
     display: flex;
     flex-direction: column;
