--- a/src/App.css
+++ b/src/App.css
@@ -52,6 +52,7 @@
     height: 50%;
     align-items: center;
     gap: 1.25rem;
+    user-select: none;
     & li{
         display: flex;
         height: 100%;
@@ -86,6 +87,56 @@
         & :nth-child(2):hover{
             border-color: rgb(228, 240, 216) ;
             opacity:0.8;
+        }
+    }
+}
+
+.navegacion-contenedor-User
+{
+    list-style: none;
+    display: flex;
+    align-self: center;
+    height: 50%;
+    align-items: center;
+    gap: 1.25rem;
+    & li{
+        display: flex;
+        height: 100%;
+        justify-content: center;
+        align-items: center;
+        padding: 0 0.5em;
+        border: 2px solid  transparent;
+        color: white;
+        user-select: none;
+     & a{
+        text-decoration: none;
+        color: white;
+     }
+     & a:hover
+     {
+      color: rgb(228, 240, 216);
+      opacity: 0.5;
+     }
+    }
+
+    & :nth-child(2){
+        border-color:  white;
+        border-radius: 5px;
+       
+    }
+    & :nth-child(2):hover{
+        border-color: rgba(228, 240, 216,0.8) ;
+       
+    }
+    & :nth-child(3){
+        border-color:  white;
+        border-radius: 5px;
+        & span{
+            cursor: pointer;
+        }
+        & span:hover{
+            color: rgb(228, 240, 216);
+            opacity: 0.5;
         }
     }
 }
