--- a/src/hojas-de-estilo/modal.css
+++ b/src/hojas-de-estilo/modal.css
@@ -3,7 +3,7 @@
     z-index: 999;
     top: 0;
     left: 0;
-    width: 100%;
+    min-width: 100%;
     min-height: 100vh;
     background-color: rgba(0,0,0,.5);
     display: none;
@@ -19,7 +19,7 @@
     position: relative;
     background-color: #fff;
     min-width: 31.25rem;
-    max-width: 62.5rem;
+    max-width: 100%;
     min-height: 31.25rem;
     max-height: 37.5rem;
    
